...
    // to store parsed data
    var articles = [Article]()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        title = "r/swift"
        
        // fetch json on the background thread
        performSelector(inBackground: #selector(fetchJSON), with: nil)
       
    }
    
...
        // resetting the image to avoid image appearance in cells that shoundn't
        // have the image
        cell.imageView?.image = nil
       
        let article = articles[indexPath.row]
        cell.textLabel?.text = article.title
        cell.textLabel?.accessibilityIdentifier = "tableView title"
        
        if let url = article.thumbnailUrl,
            let data = try? Data(contentsOf: url) {
            cell.imageView?.image = UIImage(data: data)
        }
        
...
